SERVER-9788 mongos does not respect secondary preferred after temporarily unavailable secondary