src/mongo/client/connpool.cpp
@@ -273,7 +273,19 @@ namespace mongo {
         return _finishCreate( host , socketTimeout , c );
     }
 
+    void DBConnectionPool::onRelease(DBClientBase* conn) {
+        if (_hooks->empty()) {
+            return;
+        }
+
+        for (list<DBConnectionHook*>::iterator i = _hooks->begin(); i != _hooks->end(); i++) {
+            (*i)->onRelease( conn );
+        }
+    }
+
     void DBConnectionPool::release(const string& host, DBClientBase *c) {
+        onRelease(c);
+
         scoped_lock L(_mutex);
         _pools[PoolKey(host,c->getSoTimeout())].done(this,c);
     }
